@@ -3226,13 +3226,30 @@ pBox-&gt;add(*pMenuBard, Gtk::PACK_SHRINK);
 
 <sect1 id="sec-menus-popup"><title>Popup Menus</title>
 <para>
-TODO: Update for UIManager API. Menus are normally just added to a window, but they can also be displayed temporarily as the result of a mouse button click. For instance, a context menu might be diplayed when the user clicks their right mouse button. You can use <literal>Gtk::Menu</literal>'s <literal>popup()</literal> method, but you need to provide a button identifier and the time of activation. This information is provided by the <literal>button_press_event</literal> signal, which you will need to handle anyway. For instance:
+Menus are normally just added to a window, but they can also be displayed temporarily as the result of a mouse button click. For instance, a context menu might be diplayed when the user clicks their right mouse button.</para>
+
+<para>The UI layout for a popup menu should use the <literal>popup</literal> node. For instance:
+<programlisting>
+    Glib::ustring ui_info = 
+        &quot;&lt;ui&gt;&quot;
+        &quot;  &lt;popup name='PopupMenu'&gt;&quot;
+        &quot;    &lt;menuitem action='ContextEdit'/&gt;&quot;
+        &quot;    &lt;menuitem action='ContextProcess'/&gt;&quot;
+        &quot;    &lt;menuitem action='ContextRemove'/&gt;&quot;
+        &quot;  &lt;/popup&gt;&quot;
+        &quot;&lt;/ui&quot;;
+        
+    m_refUIManager-&gt;add_ui_from_string(ui_info);
+</programlisting>
+</para>
+
+<para>To show the popup menu, use <literal>Gtk::Menu</literal>'s <literal>popup()</literal> method, providing the button identifier and the time of activation, as provided by the <literal>button_press_event</literal> signal, which you will need to handle anyway. For instance:
 <programlisting>
 bool ExampleWindow::on_button_press_event(GdkEventButton* event)
 {
   if( (event-&gt;type == GDK_BUTTON_PRESS) &amp;&amp; (event-&gt;button == 3) )
   {
-    m_Menu_Popup.popup(event-&gt;button, event-&gt;time);
+    m_Menu_Popup->popup(event-&gt;button, event-&gt;time);
     return true; //It has been handled.
   }
   else
