@@ -1,5 +1,11 @@
 2004-11-03  Murray Cumming  <murrayc@murrayc.com>
 
+	* examples/book/menus/popup/examplewindow.[h|cc]: Use the popup 
+	UIManager node type, so that this example works.
+	* docs/tutorial/gtkmm-tut.xml: Update the popup menu section.
+
+2004-11-03  Murray Cumming  <murrayc@murrayc.com>
+
 	* Removed gtkmm.spec.in and mention of it in configure.in and 
 	Makefile.am, yet again. There is no point in having a broken spec 
 	file that nobody is maintaining. spec files are distro-specific and 
